[gd_scene load_steps=4 format=3 uid="uid://ctoscnmmehx4n"]

[ext_resource type="Script" path="res://LP4-1.gd" id="1_dfpo8"]

[sub_resource type="LabelSettings" id="LabelSettings_brt0d"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_iwh0r"]
font_size = 50

[node name="LP4-1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dfpo8")

[node name="lbl_copies" type="Label" parent="."]
layout_mode = 0
offset_right = 516.0
offset_bottom = 229.0
text = "Enter number of copies:
"
label_settings = SubResource("LabelSettings_brt0d")

[node name="txt_copies" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 594.0
offset_right = 1150.0
offset_bottom = 91.0

[node name="btn_calc" type="Button" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 261.0
offset_right = 223.0
offset_bottom = 367.0
text = "Calculate
"

[node name="btn_clear" type="Button" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 394.0
offset_right = 220.0
offset_bottom = 500.0
text = "Clear
"

[node name="btn_exit" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 524.0
offset_right = 216.0
offset_bottom = 630.0
text = "exit
"

[node name="lbl_out" type="Label" parent="."]
layout_mode = 0
offset_left = 248.0
offset_top = 137.0
offset_right = 1158.0
offset_bottom = 633.0
label_settings = SubResource("LabelSettings_iwh0r")

[connection signal="pressed" from="btn_calc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btn_clear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btn_exit" to="." method="_on_btn_exit_pressed"]
